[package]
name = "car-nostd"
authors = [
  "dignifiedquire <me@dignifiedquire.com>",
  "Karim Agha <karim.dev@gmail.com>",
]
description = "Implementation the car files for no_std"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0/MIT"
rust-version = "1.70.0"
repository = "https://github.com/karim-agha/car-nostd"
homepage = "https://github.com/karim-agha/car-nostd"
readme = "README.md"

[dependencies]
cid = { version = "0.11", features = ["serde"], default-features = false }
serde = { version = "1.0.210", features = ["derive"], default-features = false }
serde_ipld_dagcbor = { version = "0.6.1", features = [
  "std",
], default-features = false }
unsigned-varint = { version = "0.8", default-features = false }
core2 = "0.4"

[dev-dependencies]
multihash = "0.19"
itertools = "0.13"
multihash-codetable = { version = "0.1", features = ["blake3"] }
proptest = "1.1"
test-strategy = "0.3"
